# vi_home_assignment

./: .gitignore  README.md  config.py  eda.ipynb  main.py  pyproject.toml
data/: classification_report_best_test.txt  classification_report_best_train.txt
models/: best_precision_model.pkl
outputs/: top_N_member_ids_test.csv
src/: __init__.py  data_loader.py  dataset_builder.py  main.py  modeling.py
src/features/: __init__.py  app_features.py  claims_features.py  utils.py  web_features.py
